# Copyright 2018 The Chromium Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.
#import("//build/toolchain/linux:clang_x64")

declare_args() {
  # The svn revisions that belong to the git hashes in DEPS. Used to cause full
  # rebuilds on libc++ rolls.
  clang_format_svn_revision = "302580"
  libcxx_svn_revision =       "344254"
  libcxxabi_svn_revision =    "344215"
  libunwind_svn_revision =    "343990"
  libcxx_revision =       "8fa87946779682841e21e2da977eccfb6cb3bded2"
}
 